Day 3 Curd operations using JPA Repository and derived queries

--- a/spring.productapp-datajpa/src/main/resources/application.properties
+++ b/spring.productapp-datajpa/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=spring.productapp-datajpa
+
+# datasource specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/springprojects
+spring.datasource.username=root
+spring.datasource.password=Tiger
+
+
+#jpa specific properties
+spring.jpa.hibernate.ddl-auto= create 
+spring.jpa.show-sql=true
