--- a/spring-datajpa-onetomany/src/main/resources/application.properties
+++ b/spring-datajpa-onetomany/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=spring-datajpa-onetomany
+spring.application.name=spring-restaurantapp
+
+# datasource specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/springprojects
+spring.datasource.username=root
+spring.datasource.password=Tiger
+
+
+#jpa specific properties
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
